--- a/index.html
+++ b/index.html
@@ -1,12 +1,89 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" class="no-js">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scottnow0</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600,700' rel='stylesheet' type='text/css'>
+
+	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+
+	<title>Menu</title>
 </head>
+
 <body>
-    <h1>你好</h1>
+	<header>
+		<!-- <a id="cd-logo" href="#0"><img src="img/cd-logo.svg" alt="Homepage"></a> -->
+		<nav id="cd-top-nav">
+			<ul>
+				<li>This is a simple menu.</li>
+			</ul>
+		</nav>
+		<a id="cd-menu-trigger" href="#0"><span class="cd-menu-text">Menu</span><span class="cd-menu-icon"></span></a>
+	</header>
+	<nav id="cd-lateral-nav">
+		<ul class="cd-navigation">
+			<li class="item-has-children">
+				<a href="#0">Experiment 1</a>
+				<ul class="sub-menu">
+					<li><a href="sy1/exp1-1.html">1-1</a></li>
+					<li><a href="sy1/exp1-2.html">1-2</a></li>
+					<li><a href="sy1/exp1-3.html">1-3</a></li>
+					<li><a href="sy1/exp1-4.html">1-4</a></li>
+					<li><a href="sy1/exp1-5.html">1-5</a></li>
+					<li><a href="sy1/exp1-6.html">1-6</a></li>
+				</ul>
+			</li> <!-- item-has-children -->
+			<li class="item-has-children">
+				<a href="#0">Experiment 2</a>
+				<ul class="sub-menu">
+					<li><a href="sy2/exp2-1.html">2-1</a></li>
+					<li><a href="sy2/exp2-2.html">2-2</a></li>
+					<li><a href="sy2/exp2-3.html">2-3</a></li>
+					<li><a href="sy2/exp2-4.html">2-4</a></li>
+				</ul>
+			</li> <!-- item-has-children -->
+			<li class="item-has-children">
+				<a href="#0">Experiment 3</a>
+				<ul class="sub-menu">
+					<li><a href="sy3/exp3-1.html">3-1</a></li>
+					<li><a href="sy3/exp3-2.html">3-2</a></li>
+					<li><a href="sy3/exp3-3.html">3-3</a></li>
+					<li><a href="sy3/exp3-4.html">3-4</a></li>
+					<li><a href="sy3/exp3-5.html">3-5</a></li>
+				</ul>
+			</li> <!-- item-has-children -->
+			<li class="item-has-children">
+				<a href="#0">Experiment 4</a>
+				<ul class="sub-menu">
+					<li><a href="sy4/exp4-1.html">4-1</a></li>
+					<li><a href="sy4/exp4-2.html">4-2</a></li>
+				</ul>
+			</li> <!-- item-has-children -->
+			<li class="item-has-children">
+				<a href="#0">Experiment 5</a>
+				<ul class="sub-menu">
+					<li><a href="sy5/exp5.html">5</a></li>
+				</ul>
+			</li> <!-- item-has-children -->
+			<li class="item-has-children">
+				<a href="#0">Experiment 6</a>
+				<ul class="sub-menu">
+					<li><a href="sy6/exp6.html">6</a></li>
+				</ul>
+			</li> <!-- item-has-children -->
+			<li class="item-has-children">
+				<a href="#0">Experiment 7</a>
+				<ul class="sub-menu">
+					<li><a href="sy7/sy7.1.html">7-1</a></li>
+					<li><a href="sy7/sy7.2.html">7-2</a></li>
+				</ul>
+			</li> <!-- item-has-children -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="js/main.js"></script> <!-- Resource jQuery -->
 </body>
+
 </html>
