--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
         .li ul li:hover {
             background-color: #828eb9;
         }
+        a{
+            text-decoration: none;
+            color: darkmagenta;
+        }
+        a:hover{
+            text-decoration: underline;
+            color: mediumorchid;
+        }
     </style>
 </head>
 
